# Learn-OpenClaw

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  exercise1.py  exercise2.py  exercise3.py  pyproject.toml  tool_demo.py
core/: llm.py  skill_loader.py
examples/: mcp_rag_server.py
examples/agent_team/: agents.py  main.py  prompts.py  team.py
examples/chatbot_with_tools/: mcp_client.py
learn_python/: async_baby.py  async_lesson.py  debug_lesson.py  file_io_lesson.py  file_searcher.py  lesson1.py  lesson2.py  lesson3.py  lesson4.py  lesson5.py  lesson6.py  lesson7.py  todo.py  todos.json
rag_demo/: rag.py
rag_demo/chroma_db/: chroma.sqlite3
rag_demo/docs/: test.txt
skills/rag-helper/: SKILL.md
skills/rag-helper/agents/: openai.yaml
tests/: test_executor.py  test_llm.py  test_node.py
tools/builtins/: rag_search.py  tool_def.py
