[project]
name = "poipoi-agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.10.0",
    "fastmcp>=3.0.1",
    "openai>=2.16.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.59.0",
]

[project.scripts]
chatbot = "examples.chatbot:main"
workflow = "examples.workflow:main"
search = "examples.search_agent:main"
nodes = "examples.node_examples:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
